# genomics-v2f

./: .devcontainer.json  .gitignore  .gitignore.workflow_block  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  INSTALL.md  README.md  data_profiler.py  devcontainer-template.json  manifest.txt  pyproject.toml  quickstart.sh  requirements.txt  run_pipeline.py  setup_wizard.py
.github/workflows/: lint.yml  test.yml
adapters/: __init__.py  base_adapter.py  gvcf_adapter.py  panel_adapter.py  single_sample_adapter.py  somatic_adapter.py  sv_adapter.py  trio_adapter.py
config/example_configs/: panel_targeted.yaml  research_wgs.yaml  single_sample_wes.yaml  trio_wes.yaml
dashboard/: app.py
dashboard/templates/: index.html
demo/: README.md
demo/germline/: config.yaml  phenotype.json  proband.vcf.gz.tbi
demo/somatic/: README.md  config.yaml  tumor_normal.vcf.gz.tbi
demo/sv/: README.md  config.yaml  sv_demo.vcf.gz.tbi
pipeline/: 01_vcf_ingest_qc.py  02_annotate_variants.py  03_database_enrichment.py  04_acmg_classification.py  05_phenotype_integration.py  06_report_generation.py  07_validation.py
pipeline/utils/: _clinvar_stars.py  acmg_engine.py  acmg_rules.py  amp_engine.py  bayesian_acmg.py  civic_client.py  clingen_allele_client.py  cnv_engine.py  consequence_mapper.py  cosmic_client.py  csv_exporter.py  curation_store.py  fhir_exporter.py  fhir_phenotype.py  (+16 more)
reference/: acmg_criteria_spec.json  acmg_strength_rules.json  clingen_dosage_sensitivity.json  clinvar_stars_mapping.json  consequence_severity.json  gnomad_population_map.json  insilico_calibration.json
scripts/: benchmark_clinvar.py  create_workspace.sh  generate_demo_data.py  generate_somatic_demo.py  generate_sv_demo.py  package_v2f.sh  refresh_clingen_dosage.sh  refresh_clinvar.sh  refresh_mavedb.sh  regenerate_demo_outputs.py
templates/: proband_report.html  report.css
tests/: conftest.py  test_amp_engine.py  test_bayesian_engine.py  test_calibrated_tiers.py  test_clingen_allele_client.py  test_cnv_engine.py  test_curation_override.py  test_curation_store.py  test_demo_data.py  test_demo_somatic_data.py  test_demo_sv_data.py  test_dual_mode_routing.py  test_exporters.py  test_fhir_connectivity.py  test_functional_evidence.py  test_litvar_client.py  test_observability.py  test_quality_gates.py  test_report_failure_surface.py  test_run_manifest.py  test_somatic_adapter.py  test_sv_adapter.py  test_validation_endpoint.py  test_vcep_overrides.py
(+29 files in other folders)
